tests/paczka1/small_fuzzy/17475334.err
Error in line 1: D6uVMEe S638 58,6
Error in line 4: pBlGu6U A173 87,8
Error in line 8: A580 S284 45,6
